# MDNotepad

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: file_ops.rs
src/lib/commands/: edit.ts  file.ts  view.ts
src/lib/components/: ContextMenu.svelte  EditorArea.svelte  FindReplace.svelte  SettingsPage.svelte  SlashCommandMenu.svelte  SourceEditor.svelte  StatusBar.svelte  Tab.svelte  TabBar.svelte  TitleBar.svelte  WindowControls.svelte  WysiwygEditor.svelte
src/lib/editor/: extensions.ts  keybindings.ts  markdown-utils.ts  search-highlight.ts  slash-commands.svelte.ts
src/lib/services/: auto-save.ts  file-service.ts  portable.ts  session.ts
src/lib/stores/: app.svelte.ts  settings.svelte.ts  tabs.svelte.ts
src/lib/types/: tab.ts
src/styles/: editor.css  fluent-tokens.css  print.css  scrollbar.css
